# sandbox-bench

./: .env.example  .env.meta.example  .gitignore  LICENSE  README.md  pyproject.toml  run-bench.sh  run-vmvm-bench.sh  run-vmvm-tier1.sh  sync.sh
.github/workflows/: benchmark.yml  pages.yml
docs/: benchmark-live.html  data.json  index.html  sync-usage.md  vmvm-preview.html
docs/results/: blaxel.js  blaxel.json  codesandbox.js  codesandbox.json  daytona.js  daytona.json  e2b.js  e2b.json  fly.js  fly.json  modal.js  modal.json  vmvm.js  vmvm.json
results/: 2026-02-21.json  2026-02-23.json  2026-02-26.json  e2b-latest.json  full-blaxel.json  full-codesandbox.json  full-daytona.json  full-e2b.json  manifest.json  mcp-all.json  mcp-fly.json  vmvm-basic-perf.json  vmvm-competitive.json  vmvm-environment.json  vmvm-full.json  vmvm-latest.json  vmvm-networking.json  vmvm-swe.json  vmvm-training-batch-t3.json  vmvm-training-batch.json
scripts/: build-dashboard-data.py
src/sandbox_bench/: __init__.py  benchmark.py  capabilities.py  cli.py  pricing.py  provider.py  scoring.py
src/sandbox_bench/providers/: __init__.py  blaxel.py  codesandbox.py  daytona.py  docker_image.py  e2b.py  fly.py  microvm.py  modal.py  vmvm.py
src/sandbox_bench/suites/: __init__.py  agentic_session.py  basic.py  competitive.py  environment.py  mcp.py  networking.py  performance.py  swe.py  training_batch.py
